Minor Adjustment + added NashTech Area PeopleController

--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Areas/NashTech/Views/Rookies/Index.cshtml
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Areas/NashTech/Views/Rookies/Index.cshtml
@@ -6,4 +6,8 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p>This is NashTech Area Index Page</p>
+    <ul>
+        <li><a href="NashTech/people/gender/1">Return Males</a></li>
+    </ul>
+
 </div>
