Done Unit Test for PeopleService and 50% for People Controller

--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/People/Create.cshtml
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/People/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCDotNetAssignment.Models.Entities.Person
+﻿@model MVCDotNetAssignment.Domain.Entities.Person
 
 @{
     ViewData["Title"] = "View1";
