--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/Home/Index.cshtml
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
         <li><a href="people/gender/1">Return Males</a></li>
         <li><a href="people/oldest">Return Oldest</a></li>
         <li><a href="people/fullnames">Return Full Names</a></li>
-        <li><a href="people/age/above/2000">Return Above 2000</a></li>
-        <li><a href="people/age/is/2000">Return Is 2000</a></li>
-        <li><a href="people/age/less/2000">Return Less 2000</a></li>
+        <li><a href="people/age?operation=above&year=2000">Return Above 2000</a></li>
+        <li><a href="people/age?operation=is&year=2000">Return Is 2000</a></li>
+        <li><a href="people/age?operation=less&year=2000">Return Less 2000</a></li>
         <li><a href="people/download/excel">Export Excel</a></li>
         <li><a asp-area="NashTech" asp-controller="Rookies" asp-action="Index">Go to NashTech Area</a></li>
     </ul
