--- a/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/People/Edit.cshtml
+++ b/Assignments/MVCDotNetAssignment/MVCDotNetAssignment.WebApp/Views/People/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCDotNetAssignment.Models.Entities.Person
+﻿@model MVCDotNetAssignment.Domain.Entities.Person
 
 @{
     ViewData["Title"] = $"Edit {Model.FirstName}";
